tests/baselines/reference/issue58960.errors.txt
issue58960.ts(8,1): error TS2578: Unused '@ts-expect-error' directive.
issue58960.ts(10,1): error TS2578: Unused '@ts-expect-error' directive.
issue58960.ts(16,1): error TS2578: Unused '@ts-expect-error' directive.
issue58960.ts(18,1): error TS2578: Unused '@ts-expect-error' directive.


==== issue58960.ts (4 errors) ====
    type A = any
    // @ts-ignore
    type B = DoesNotExist
    type C = B & any
    
    // @ts-expect-error
    const a: 0 extends 1 & A ? true : false = false;
    // @ts-expect-error
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2578: Unused '@ts-expect-error' directive.
    const b: 0 extends 1 & B ? true : false = false;
    // @ts-expect-error
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2578: Unused '@ts-expect-error' directive.
    const c: 0 extends 1 & C ? true : false = false;
    
    
    // @ts-expect-error
    const a2: void extends A ? true : false = false;
    // @ts-expect-error
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2578: Unused '@ts-expect-error' directive.
    const b2: void extends B ? true : false = false;
    // @ts-expect-error
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2578: Unused '@ts-expect-error' directive.
    const c2: void extends C ? true : false = false;
    
    